--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name="com.bottle.track.ui.coordinatorlayout.AppBarLayoutActivity" />
+        <activity android:name="com.bottle.track.ui.coordinatorlayout.CollapsingToolbarLayoutActivity" />
     </application>
 
 </manifest>
