--- a/config.gradle
+++ b/config.gradle
@@ -19,7 +19,8 @@ ext {
             supportAppcompatV7: "com.android.support:appcompat-v7:${supportLibrary}",
             supportV4       : "com.android.support:support-v4:${supportLibrary}",
             design          : "com.android.support:design:${supportLibrary}",
-            constraintLayout: 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
+            constraintLayout: 'com.android.support.constraint:constraint-layout:1.0.0-alpha8',
+            cardView        : "com.android.support:cardview-v7:${supportLibrary}"
     ]
 
     thirdParty = [
