--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
 
         <meta-data android:name="com.amap.api.v2.apikey" android:value="@string/amap_app_key" />
         <service android:name="com.amap.api.location.APSService" />
-        <service android:name="com.bottle.track.TrekService" />
+        <service android:name="com.bottle.track.service.TrekService" />
 
         <activity
             android:name="com.bottle.track.home.MainActivity"
