--- a/config.gradle
+++ b/config.gradle
@@ -28,8 +28,8 @@ ext {
              * 使用时注意哪些需要配置混淆的：retrofit
              */
             junit            : 'junit:junit:4.12',
-            bugly            : 'com.tencent.bugly:crashreport:latest.release',       //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.1.9
-            buglyNative      : 'com.tencent.bugly:nativecrashreport:latest.release', //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
+            bugly            : 'com.tencent.bugly:crashreport:2.6.6',       //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.1.9
+            buglyNative      : 'com.tencent.bugly:nativecrashreport:3.3.1', //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
             logger           : 'com.orhanobut:logger:2.1.1',                         // 封装好的日志
             timber           : 'com.jakewharton.timber:timber:4.5.1',                // 可以添加多个日志的日志管理工具
             fastJson         : 'com.alibaba:fastjson:1.1.63.android',                // 阿里的json库
@@ -47,7 +47,11 @@ ext {
             roundImage       : 'com.makeramen:roundedimageview:2.3.0',               // 圆角ImageView，需要添加mavenCentral()
             safewebviewbridge: 'cn.pedant.safewebviewbridge:library:1.4',            // Java与JavaScript的通信，需要添加mavenCentral()
             jsBridge         : 'com.github.lzyzsd:jsbridge:1.0.4',                   // jsbridgeJava与JavaScript的通信，需要添加maven { url "https://jitpack.io" }
-            greenDao         : 'org.greenrobot:greendao:3.2.2'
+            greenDao         : 'org.greenrobot:greendao:3.2.2',
+
+            amap3D           : 'com.amap.api:3dmap:5.6.0',
+            amapLocation     : 'com.amap.api:location:3.6.1',
+            amapSearch       : 'com.amap.api:search:5.5.0'
 
             /** greenDao 需要在根目录的build.gradle中加入如下
              // In your root build.gradle file:
