--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,17 +14,19 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-        android:name="com.bottle.track.MyApplication"
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.amap.api.v2.apikey"
+            android:value="@string/amap_app_key" />
 
-        <meta-data android:name="com.amap.api.v2.apikey" android:value="@string/amap_app_key" />
         <service android:name="com.amap.api.location.APSService" />
-        <service android:name="com.bottle.track.service.TrekService" />
+        <service android:name=".service.TrekService" />
 
         <activity
             android:name=".home.MainActivity"
@@ -35,25 +37,28 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.tencent.tauth.AuthActivity"
-            android:noHistory="true"
-            android:launchMode="singleTask" >
+            android:launchMode="singleTask"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="tencent1106494457" />
             </intent-filter>
         </activity>
-        <activity android:name="com.tencent.connect.common.AssistActivity"
-                  android:theme="@android:style/Theme.Translucent.NoTitleBar"
-                  android:configChanges="orientation|keyboardHidden|screenSize"/>
-
-        <activity android:name="com.bottle.track.ui.coordinatorlayout.AppBarLayoutActivity" />
-        <activity android:name="com.bottle.track.ui.coordinatorlayout.CollapsingToolbarLayoutActivity" />
+        <activity
+            android:name="com.tencent.connect.common.AssistActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <activity android:name=".ui.coordinatorlayout.AppBarLayoutActivity" />
+        <activity android:name=".ui.coordinatorlayout.CollapsingToolbarLayoutActivity" />
         <activity android:name=".user.LoginActivity" />
+        <activity android:name=".map.business.TrackPreviewActivity" />
+        <activity android:name=".map.business.TrackEditorActivity"></activity>
     </application>
 
 </manifest>
