--- a/config.gradle
+++ b/config.gradle
@@ -27,6 +27,8 @@ ext {
             /**
              * 使用时注意哪些需要配置混淆的：retrofit
              */
+            debugLeakCanary  : 'com.squareup.leakcanary:leakcanary-android:1.5.4',
+            releaseLeakCanary: 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4',
             junit            : 'junit:junit:4.12',
             bugly            : 'com.tencent.bugly:crashreport:2.6.6',       //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.1.9
             buglyNative      : 'com.tencent.bugly:nativecrashreport:3.3.1', //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
