[add] 1.一个webview activity；2.弹出对话框

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,10 @@ android {
         main.java.srcDirs += 'build/generated/source/greendao'
     }
 
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 greendao {
